# cp_reach

./: .gitignore  ARCHITECTURE.md  Deep_Dive.md  GRAVITY_FEEDFORWARD_SUMMARY.md  LICENSE  README.md  SIMPLIFIED_API_SUMMARY.md  Untitled.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  test_frame_analysis.py  test_gravity_feedforward.py  test_rotated_reference.py  test_se23_log.py  test_se23_log_large.py  test_se23_structure.py  test_simple_api.py  visualize_results.py
.github/workflows/: lint.yml  test.yml
cp_reach/: __init__.py  __main__.py  cli.py  requirements.txt  satelliteLMI.ipynb
cp_reach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cp_reach/.ipynb_checkpoints/: BK-checkpoint.ipynb  satelliteLMI-checkpoint.ipynb
cp_reach/config/: __init__.py  query.py  uncertainty.py
cp_reach/development/: __init__.py
cp_reach/dynamics/: __init__.py  classification.py  state_space.py
cp_reach/examples/: Quadrotor_example.ipynb  Rover_example.ipynb  Satellite_example.ipynb  Satellite_example_p2.ipynb  Satellite_log_control.ipynb  Satellite_log_controlipynb  quadrotor_inv_points.ipynb  ref_satellite.npz  ref_traj.npz  satellite-outer.ipynb  satellite-outer2.ipynb  satellite-outer3.ipynb  satelliteLMI2.ipynb
cp_reach/flowpipe/: IntervalHull.py  __init__.py  flowpipe.py  inner_bound.py  outer_bound.py
cp_reach/geometry/: __init__.py  rigid_body.py
cp_reach/ir/: __init__.py  ast_parser.py  loader.py  state_space.py
cp_reach/lie/: SE23.py  __init__.py  se3.py  so3.py  symbolic.py  util.py
cp_reach/physics/: __init__.py  angular_acceleration.py  coupled_dynamics.py  flowpipe.py  rigid_body.py
cp_reach/planning/: __init__.py  polynomial.py  trajectory.py
cp_reach/plotting/: __init__.py  plotting.py
cp_reach/quadrotor/: __init__.py  invariant.py  invariant_set.py  log_linearized.py  mission.py  trajectory.py
cp_reach/reachability/: __init__.py  certification.py  ellipsoids.py  lmi.py  polytopic.py  workflows.py
cp_reach/rover/: __init__.py  simple_turn.py
cp_reach/satellite/: TH_LTV.py  TH_LTV2.py  invariant_set.py  invariant_set2.py  invariant_set3.py  invariant_set4.py  mission.py  mission2.py  plotting.py  reachable_set.py  sat_log_linearized.py
cp_reach/sim/: __init__.py  multirotor_control.py  multirotor_plan.py  multirotor_ref_traj.py  satellite_dynamics.py  satellite_plan.py
cp_reach/utils/: plotting.py
examples/: README.md
examples/basic/: EKF_import.ipynb  linear_import.ipynb  nonlinear_import.ipynb  pendulum_example.ipynb
examples/general/: README.md  run_analysis.py  structured_nonlinear.ipynb  structured_workflow.ipynb  uncertainty.yaml
examples/quadrotor/: quadrotor_flowpipe.ipynb
examples/rover/: rover_plots.ipynb
examples/satellite/: hcw_vs_se23_transfer.ipynb  invariant_deltav_planning.ipynb  log_error_validation.ipynb  paper_figures.ipynb  satellite_error_bounds.ipynb  (+1 more)
notebooks/: __init__.py
tests/: __init__.py  conftest.py  test_dynamics.py  test_integration.py  test_ir_loader.py  test_lmi.py
(+69 files in other folders)
