[project]
name = "cp_reach"
version = "0.1.0"
description = "Reachability Analysis Library for Cyber-Physical Systems"
authors = [{ name="Micah Condie", email="mkcondie01@gmail.com" }]
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = []  # Add any required packages here
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

