[project]
name = "cp_reach"
version = "0.1.0"
description = "Reachability Analysis Library for Cyber-Physical Systems"
authors = [{ name = "Micah Condie", email = "mkcondie01@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.7"

dependencies = [
    "casadi>=3.7.0",
    "control>=0.10.1",
    "cvxpy==1.6.0",
    "matplotlib>=3.6.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "sympy>=1.13.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

