[project]
name = "cp_reach"
version = "0.1.0"
description = "Reachability Analysis Library for Cyber-Physical Systems"
authors = [{ name = "Micah Condie", email = "mkcondie01@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"

dependencies = [
    "casadi>=3.7.0",
    "control>=0.10.1",
    "cvxpy>=1.6.0",
    "matplotlib>=3.6.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "sympy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
satellite = [
    "cyecca>=0.1.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=1.0.0",
]
all = [
    "cp_reach[dev,satellite,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/cp_reach"
Repository = "https://github.com/yourusername/cp_reach"
Issues = "https://github.com/yourusername/cp_reach/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.ipynb_checkpoints
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["cp_reach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

